--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
     "singleQuote": true
   },
   "devDependencies": {
-    "@types/node": "^10.5.0",
     "@types/jest": "^24.0.0",
+    "@types/node": "^10.5.0",
     "@types/uuid": "^3.4.3",
     "colors": "^1.1.2",
     "commitizen": "^3.0.4",
@@ -90,7 +90,7 @@
     "husky": "^1.0.0",
     "jest": "24.0.0",
     "lint-staged": "^8.0.5",
-    "lodash.camelcase": "^4.3.0",
+    "lodash": "4.17.11",
     "nps": "5.9.3",
     "nps-utils": "1.7.0",
     "prettier": "^1.13.7",
