--- a/package.json
+++ b/package.json
@@ -115,13 +115,14 @@
     "rollup-plugin-sourcemaps": "0.6.2",
     "rollup-plugin-typescript2": "0.27.2",
     "semantic-release": "^17.2.3",
+    "semantic-release-cli": "^5.4.0",
     "ts-jest": "26.3.0",
     "ts-node": "9.0.0",
     "typedoc": "0.18.0",
+    "typedoc-neo-theme": "^1.0.10",
     "typescript": "^4.0.2",
     "uuid": "8.3.0",
-    "validate-commit-msg": "2.14.0",
-    "semantic-release-cli": "^5.4.0"
+    "validate-commit-msg": "2.14.0"
   },
   "dependencies": {},
   "husky": {
